--- a/.github/workflows/find-folder.yml
+++ b/.github/workflows/find-folder.yml
@@ -24,6 +24,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: ${{ github.event_name == 'pull_request' && 2 || 0 }}
 
       # Get folder that was added
       - name: Detect Added Folder
