--- a/.github/workflows/find-folder.yml
+++ b/.github/workflows/find-folder.yml
@@ -37,6 +37,7 @@ jobs:
             fi
 
       - name: List changed files
+        id: changed-folder
         run: |
             for file in ${{ steps.changed-files.outputs.changed_files }}; do
                 echo "$file was changed"
@@ -45,7 +46,8 @@ jobs:
             echo "First changed file: $first_changed_file"
             # echo "::set-output name=first_changed_file::$first_changed_file"
             # echo "The first changed file is: ${{ steps.extract-first-changed-file.outputs.first_changed_file }}"
-            # first_folder_name="${input_string%%/*}"
+            echo first_folder_name="${first_changed_file%%/*}" >> $GITHUB_OUTPUT
+            echo "Folder Name: ${steps.changed-folder.outputs.first_folder_name}"
             
 
             
