--- a/.github/workflows/find-folder.yml
+++ b/.github/workflows/find-folder.yml
@@ -46,8 +46,8 @@ jobs:
             echo "First changed file: $first_changed_file"
             # echo "::set-output name=first_changed_file::$first_changed_file"
             # echo "The first changed file is: ${{ steps.extract-first-changed-file.outputs.first_changed_file }}"
-            echo first_folder_name="${first_changed_file%%/*}" >> $GITHUB_OUTPUT
-            echo "Folder Name: ${steps.changed-folder.outputs.first_folder_name}"
+            echo first_folder_name="${first_changed_file%%/*}"
+            echo "Folder Name: $first_folder_name"
             
 
             
