--- a/.github/workflows/find-folder.yml
+++ b/.github/workflows/find-folder.yml
@@ -51,14 +51,25 @@ jobs:
             echo "folder_name=$first_folder_name" >> $GITHUB_OUTPUT
 
       - name: Install, build, and upload your site output
-        # uses: withastro/action@v2
-        # with:
-            # path: . # The root location of your Astro project inside the repository. (optional)
+        uses: withastro/action@v3
+        with:
+            path: "./${{ steps.changed-folder.outputs.folder_name }}" # The root location of your Astro project inside the repository. (optional)
             # node-version: 20 # The specific version of Node that should be used to build your site. Defaults to 18. (optional)
             # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
-        run: |
-            echo "The folder name is: ${{ steps.changed-folder.outputs.folder_name }}"
-            
+        # run: |
+        #     echo "The folder name is: ${{ steps.changed-folder.outputs.folder_name }}"
+
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4            
 
             
       # Get folder that was added
