--- a/.github/workflows/find-folder.yml
+++ b/.github/workflows/find-folder.yml
@@ -71,7 +71,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: "${{ steps.deployment.outputs.page_url }}/onboarding-tutorials/${{ steps.changed-folder.outputs.folder_name }}"
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
