--- a/.github/workflows/find-folder.yml
+++ b/.github/workflows/find-folder.yml
@@ -33,6 +33,11 @@ jobs:
         with:
           fetch-depth: ${{ github.event_name == 'pull_request' && 2 || 0 }}
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+
       - name: Get changed files
         id: changed-files
         run: |
@@ -56,26 +61,42 @@ jobs:
             echo "Folder Name: $first_folder_name"
             echo "folder_name=$first_folder_name" >> $GITHUB_OUTPUT
 
-      - name: Install, build, and upload your site output
-        uses: withastro/action@v3
-        with:
-            path: "./${{ steps.changed-folder.outputs.folder_name }}" # The root location of your Astro project inside the repository. (optional)
-            # node-version: 20 # The specific version of Node that should be used to build your site. Defaults to 18. (optional)
-            # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
-        # run: |
-        #     echo "The folder name is: ${{ steps.changed-folder.outputs.folder_name }}"
+      - name: Install
+        shell: "bash"
+        working-directory: "./${{ steps.changed-folder.outputs.folder_name }}"
+        run: npm install
+  
+      - name: Build
+        shell: "bash"
+        working-directory: "./${{ steps.changed-folder.outputs.folder_name }}"
+        run: npm run build
+      
+      - name: Install and deploy to surge
+        run: |
+            npm install -g surge
+            surge ./${{ steps.changed-folder.outputs.folder_name }}/dist ${{ steps.changed-folder.outputs.folder_name }}.surge.sh --token ${{ secrets.SURGE_TOKEN }}
 
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: "${{ steps.deployment.outputs.page_url }}/onboarding-tutorials/${{ steps.changed-folder.outputs.folder_name }}"
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4            
+      # - name: Install, build, and upload your site output
+      #   uses: withastro/action@v3
+      #   with:
+      #       path: "./${{ steps.changed-folder.outputs.folder_name }}" # The root location of your Astro project inside the repository. (optional)
+      #       # node-version: 20 # The specific version of Node that should be used to build your site. Defaults to 18. (optional)
+      #       # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+      #   # run: |
+      #   #     echo "The folder name is: ${{ steps.changed-folder.outputs.folder_name }}"
+
+
+  # deploy:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: github-pages
+  #     url: "${{ steps.deployment.outputs.page_url }}/onboarding-tutorials/${{ steps.changed-folder.outputs.folder_name }}"
+  #   steps:
+  #     - name: Deploy to GitHub Pages
+  #       id: deployment
+  #       uses: actions/deploy-pages@v4            
 
             
       # Get folder that was added
