--- a/.github/workflows/find-folder.yml
+++ b/.github/workflows/find-folder.yml
@@ -61,15 +61,15 @@ jobs:
             echo "Folder Name: $first_folder_name"
             echo "folder_name=$first_folder_name" >> $GITHUB_OUTPUT
 
-      - name: Install
-        shell: "bash"
-        working-directory: "./${{ steps.changed-folder.outputs.folder_name }}/"
-        run: npm install
+      # - name: Install
+      #   shell: "bash"
+      #   working-directory: "./${{ steps.changed-folder.outputs.folder_name }}/"
+      #   run: npm install
   
-      - name: Build
-        shell: "bash"
-        working-directory: "./${{ steps.changed-folder.outputs.folder_name }}/"
-        run: npm run build
+      # - name: Build
+      #   shell: "bash"
+      #   working-directory: "./${{ steps.changed-folder.outputs.folder_name }}/"
+      #   run: npm run build
       
       # - name: Install and deploy to surge
       #   run: |
@@ -77,14 +77,14 @@ jobs:
       #       surge ./${{ steps.changed-folder.outputs.folder_name }}/copy/dist ${{ steps.changed-folder.outputs.folder_name }}.surge.sh --token ${{ secrets.SURGE_TOKEN }}
 
 
-      # - name: Install, build, and upload your site output
-      #   uses: withastro/action@v3
-      #   with:
-      #       path: "./${{ steps.changed-folder.outputs.folder_name }}" # The root location of your Astro project inside the repository. (optional)
-      #       # node-version: 20 # The specific version of Node that should be used to build your site. Defaults to 18. (optional)
-      #       # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
-      #   # run: |
-      #   #     echo "The folder name is: ${{ steps.changed-folder.outputs.folder_name }}"
+      - name: Install, build, and upload your site output
+        uses: withastro/action@v3
+        with:
+            path: "./${{ steps.changed-folder.outputs.folder_name }}" # The root location of your Astro project inside the repository. (optional)
+            # node-version: 20 # The specific version of Node that should be used to build your site. Defaults to 18. (optional)
+            # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+        # run: |
+        #     echo "The folder name is: ${{ steps.changed-folder.outputs.folder_name }}"
 
 
   deploy:
