--- a/.github/workflows/find-folder.yml
+++ b/.github/workflows/find-folder.yml
@@ -97,7 +97,9 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        run: echo "Deployed URL: ${{ steps.deployment.outputs.page_url }}"
+      - name: Print the deployed URL
+        run: |
+            echo "Deployed URL: ${{ steps.deployment.outputs.page_url }}"
 
             
       # Get folder that was added
